# FlashRAG

./: pyproject.toml
flashrag/examples/quick_start/: simple_pipeline.py
flashrag/prompt/: base_prompt.py
